client/src/App.css
:root {
	--primary-color: #699b46;
	--dark-color: #14281f;
	--light-color: #ebd92d;
	--danger-color: #96100f;
	--success-color: #7cb518;

	--orange-pantone: #ff5400ff;
	--pumpkin: #ff6d00ff;
	--orange-peel: #ff9e00ff;
	--pacific-cyan: #00b4d8ff;
	--blue-green: #0096c7ff;
	--honolulu-blue: #0077b6ff;
	--marian-blue: #023e8aff;

	--h2-min-size: 0.8rem;
	--h2-preferred-size: 1vw + 0.5rem;
	--h2-max-size: 2rem;
	--dash-item-size: clamp(150px, 15vw, 500px);
}

* {
	box-sizing: border-box;
	margin: 0;
	padding: 0;
}

body {
	font-family: "myriad-pro", "Times New Roman", Times, serif;
	font-size: 1.5rem;
	line-height: 1.6;
	background-color: #fff;
	color: #333;
}

i {
	margin: 0 0.5rem;
}

nav {
	background-color: var(--primary-color);
	color: #fff;
	padding: 1rem;
}

nav ul {
	display: flex;
}

nav ul li a {
	color: white;
	list-style: none;
	padding-right: 1rem;
}

nav i {
	color: white;
	margin-right: 0.2rem;
}

ul {
	list-style: none;
}

.loader {
	width: 100%;
	margin: auto;
	display: flex;
	justify-content: center;
	align-items: center;
}

.spinner {
	animation: spin 2s linear infinite;
}

h1 {
	font-size: 3rem;
}

a {
	text-decoration: none;
	color: var(--pacific-cyan);
}

nav a:visited {
	color: var(--white);
}

a:visited {
	font-style: bold;
	text-shadow: 0.1rem;
	color: var(--marian-blue);
}

@keyframes spin {
	0% {
		transform: rotate(0deg);
	}
	100% {
		transform: rotate(360deg);
	}
}

.btn {
	display: inline-block;
	background: var(--light-color);
	color: #333;
	padding: 0.5rem 1.5rem;
	border: none;
	cursor: pointer;
	margin: 0.5rem;
	transition: opacity 0.2s ease-in;
	outline: none;
}

.btn-warning {
	background: var(--orange-pantone);
	color: white;
}

.line {
	height: 1px;
	background: #ccc;
	margin: 1.5rem 0;
}

/* Overlay */
.dark-overlay {
	background-color: rgba(0, 0, 0, 0.4);
	position: absolute;
	top: 0;
	left: 0;
	width: 100%;
	height: 100%;
}

/* Navbar */
.navbar {
	display: flex;
	justify-content: space-between;
	align-items: center;
	padding: 1rem 2rem;
	position: fixed;
	z-index: 1;
	width: 100%;
	top: 0;
	border-bottom: solid 1px var(--primary-color);
	opacity: 0.9;
}

.navbar ul {
	display: flex;
}

.navbar li {
	font-size: 3rem;
}

.navbar a {
	color: #fff;
	padding: 0.5rem;
	margin: 0 0.5rem;
}

.navbar a:hover {
	color: var(--primary-color);
}

.navbar .welcome span {
	margin-right: 0.6rem;
}

/* Landing Page */
.landing {
	position: relative;
	background-image: url("./img/fruit-frame.jpg");
	background-repeat: no-repeat;
	background-position: center center;
	background-size: cover;
	height: 100vh;
	width: 100vw;
}

.landing-inner {
	color: #fff;
	height: 100%;
	width: 80%;
	margin: auto;
	display: flex;
	flex-direction: column;
	align-items: center;
	justify-content: center;
	text-align: center;
}

/* Dashboard */

.dash-grid {
	margin: auto;
	padding: 2rem;
	width: 50%;
	display: grid;
	grid-template-columns: repeat(2, 1fr);
	justify-content: center;
	place-items: center;
	gap: 2rem;
}

.dash-item {
	width: var(--dash-item-size);
	height: var(--dash-item-size);
	border-radius: 5rem;
	background-color: var(--primary-color);
	background-image: url("./img/otherImages/acaibowl.jpg");
	background-size: cover;
	background-position: center;
	background-repeat: no-repeat;
	position: relative;
	display: flex;
	align-items: center;
	justify-content: center;
	color: white;
	text-decoration: none;
	text-align: center;
	font-size: 1rem;
	overflow: hidden;
}

.dash-item:hover {
	border: 5px solid var(--orange-peel);
}

.dash-item.search {
	background-image: url("./img/otherImages/foursmoothies.jpg");
}

.dash-item.create {
	background-image: url("./img/otherImages/beachysmoothies6.jpg");
}

.dash-item.saved {
	background-image: url("./img/otherImages/beachsmoothies3.jpg");
}

.dash-item.your-recipes {
	background-image: url("./img/otherImages/vegsmoothies.jpg");
}

.dash-item.trending {
	background-image: url("./img/otherImages/kidstoast.jpg");
}

.dash-item.account {
	background-image: url("./img/otherImages/tropicalsmoothiebowl.jpg");
}

.dash-item h2 {
	font-size: clamp(
		var(--h2-min-size),
		var(--h2-preferred-size),
		var(--h2-max-size)
	);
	padding: 0.5rem 1rem;
	background-color: var(--orange-peel);
	border-radius: 5rem;
	color: white;
}

/* Forms */

.form .form-group {
	margin: 1.2rem 0;
	width: 100%;
}

.form .form-text {
	display: block;
	margin-top: 0.5rem;
	color: #888;
}

.form input[type="text"],
.form input[type="email"],
.form input[type="password"],
.form input[type="date"],
.form input[type="number"],
.form select,
.form textarea {
	display: block;
	padding: 0.5rem;
	font-size: 1.5rem;
	border: 1px solid #ccc;
	border-radius: 5px;
	outline: none;
}
.form input[type="text"],
.form input[type="email"],
.form input[type="password"],
.form input[type="date"],
.form select {
	width: 100%;
}

.form input:focus,
.form select:focus,
.form textarea:focus {
	border: 2.5px solid var(--orange-peel);
	outline: none;
}

.form input[type="submit"],
button {
	font: inherit;
}

.search-recipes .ingredients {
	display: grid;
	grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
	width: clamp(60%, 60vw, 60%);
	justify-content: center;
	margin: auto;
}

.search-recipes .ingredient {
	display: flex;
	align-items: center;
	border-bottom: 1px dashed #ccc;
	border-right: 1px dashed #ccc;
	width: 100%;
}

.search-recipes .ingredient i {
	margin-right: 0.5rem;
	cursor: pointer;
}

.search-recipes .ingredient.included {
	background-color: var(--primary-color);
}

.search-recipes .ingredient.excluded {
	background-color: var(--orange-peel);
}

.search-recipes .strike-through {
	text-decoration: line-through;
}

.search-recipes,
.create-recipe,
.recipe {
	width: 100%;
	margin: 1rem auto;
	display: flex;
	flex-direction: column;
	align-items: center;
	justify-content: center;
	text-align: center;
	gap: 0.5rem;
}

.recipes {
	margin: auto;
	text-align: center;
	width: 100%;
	gap: 1rem;
}

.recipes .links a {
	margin-top: 1rem;
	display: block;
}

.recipe-list ul {
	width: 100%;
	display: grid;
	justify-content: center;
	align-items: center;
	margin: auto;
	gap: 1rem;
}

.recipe-list li {
	display: grid;
	grid-template-columns: repeat(3, 1fr);
	width: 50%;
	margin: auto;
	justify-content: space-evenly;
	align-items: center;
	gap: 1rem;
	border-bottom: 1px dotted var(--honolulu-blue);
}

.recipe .ratings {
	display: flex;
	align-items: center;
	justify-content: center;
}

.recipe .labels {
	display: flex;
	flex-wrap: wrap;
	align-content: center;
	justify-items: center;
	gap: 0.5rem;
}

.label {
	padding: 0 0.5rem;
	border-radius: 5px;
	color: white;
}

.low-carb {
	background-color: var(--primary-color);
}

.low-fat {
	background-color: var(--pumpkin);
}

.high-protein {
	background-color: var(--honolulu-blue);
}

.bulking {
	background-color: var(--marian-blue);
}

.lean {
	background-color: var(--blue-green);
}

.search-recipes .form {
	width: 100%;
}

.search-recipes .form .name-search {
	display: flex;
	justify-content: center;
	width: 100%;
	margin: auto;
	flex-wrap: wrap;
}

.name-search input[type="text"] {
	width: 15rem;
	margin: 0.5rem 2rem;
	font-size: 1rem;
	height: 2rem;
}

.tabs {
	display: grid;
	grid-template-columns: repeat(6, 1fr);
	justify-content: center;
	margin: auto;
	background-color: var(--pacific-cyan);
	width: 60%;
}

.tab-button {
	background-color: var(--pacific-cyan);
	color: white;
	border: none;
	cursor: pointer;
	display: flex;
	align-items: center;
	justify-content: center;
	padding: 0.5rem;
}

.tab-button.active {
	background-color: var(--blue-green);
}

.tab-button:hover {
	background-color: var(--blue-green);
}

.search-recipes .optimizations {
	display: flex;
	flex-wrap: wrap;
	justify-content: center;
	gap: 2rem;
	font-size: 1rem;
}

.optimization label {
	margin-left: 0.5rem;
	font-size: 1rem;
}

.search-recipes .optimizations {
	display: flex;
	flex-wrap: wrap;
	justify-content: center;
	gap: 2rem;
	font-size: 1rem;
}

.optimization input[type="checkbox"] {
	accent-color: var(--blue-green);
}

.optimization label {
	margin-left: 0.5rem;
	font-size: 1rem;
}

.portion {
	display: flex;
	align-items: center;
	justify-content: center;
	margin: auto;
	width: 20rem;
}

.portion input[type="number"] {
	width: 4rem;
	margin: 0 0.5rem;
}

.create-recipe input[type="text"],
.create-recipe select {
	width: 20rem;
	margin: 2rem auto;
}

.recipe-ingredients ul {
	display: flex;
	flex-wrap: wrap;
	width: 90%;
	justify-content: center;
	list-style: none;
	margin: 2rem auto;
}

.recipe-ingredients li {
	display: flex;
	flex-direction: column;
	align-items: center;
	justify-content: center;
}

.create-recipe .recipe-ingredients ul li,
.create-recipe .ingredient {
	position: relative;
}

.ingredient img {
	margin: 2rem;
	width: 175px;
	height: 175px;
	border-radius: 50%;
}

.create-recipe .ingredient .chart {
	position: absolute;
	margin: auto;
	top: 0;
	left: 0;
	display: flex;
	justify-content: center;
	align-items: center;
	width: 100%;
	height: 100%;
	pointer-events: none;
}

.create-recipe .ingredient .calories {
	position: absolute;
	display: flex;
	top: 75%;
	left: 0;
	justify-content: center;
	margin: auto;
	width: 100%;
	font-weight: 700;
	color: var(--dark-color);
	font-size: 0.9rem;
}

.create-recipe .ingredient .chart svg {
	margin: 2rem;
	position: absolute;
	width: 175%;
	height: 175px;
	top: 0;
}

.create-recipe .ingredient .fa-x {
	position: absolute;
	font-size: 1.5rem;
	top: 0;
	right: 0;
	cursor: pointer;
	color: var(--danger-color);
}

.nutrient-grid {
	margin: auto;
	width: 80%;
	display: grid;
	justify-items: center;
	border: 1px solid var(--pacific-cyan);
	border-radius: 5px;
}

.nutrient-grid .classification {
	width: 100%;
	text-align: center;
	background-color: var(--pacific-cyan);
	color: white;
}

.nutrients {
	width: 100%;
	display: flex;
	flex-wrap: wrap;
	justify-content: center;
	align-items: center;
	gap: 0 5rem;
}

.nutrient {
	display: flex;
	flex-direction: column;
	align-items: center;
	justify-content: center;
}

@media screen and (max-width: 768px) {
	.ingredients {
		width: 90%;
		grid-template-columns: repeat(2, 1fr);
	}

	.tabs {
		width: 90%;
		grid-template-columns: repeat(3, 1fr);
	}
}

